wip: proper budget
